[gd_scene load_steps=4 format=3 uid="uid://bj8eltd7fntdv"]

[ext_resource type="Script" path="res://pause-menu/pause_menu.gd" id="1_d1sbe"]
[ext_resource type="Texture2D" uid="uid://m7v6swmbikqw" path="res://1x1.png" id="1_hb4sf"]
[ext_resource type="FontFile" uid="uid://b4nqi4tsfdvuv" path="res://font/f25_bank_printer/F25_Bank_Printer.ttf" id="3_xa8ec"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d1sbe")

[node name="BG" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.454902)
z_index = 2
position = Vector2(960, 540)
scale = Vector2(1920, 1080)
texture = ExtResource("1_hb4sf")

[node name="Label" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 858.0
offset_top = 464.0
offset_right = 1062.0
offset_bottom = 515.0
theme_override_fonts/font = ExtResource("3_xa8ec")
theme_override_font_sizes/font_size = 50
text = "PAUSED"

[node name="Resume" type="Button" parent="."]
process_mode = 3
z_index = 2
layout_mode = 0
offset_left = 872.0
offset_top = 541.0
offset_right = 1041.0
offset_bottom = 593.0
theme_override_fonts/font = ExtResource("3_xa8ec")
theme_override_font_sizes/font_size = 35
text = "Resume"

[node name="MainMenu" type="Button" parent="."]
process_mode = 3
z_index = 2
layout_mode = 0
offset_left = 848.0
offset_top = 616.0
offset_right = 1070.0
offset_bottom = 668.0
theme_override_fonts/font = ExtResource("3_xa8ec")
theme_override_font_sizes/font_size = 35
text = "Main Menu"

[node name="Quit" type="Button" parent="."]
process_mode = 3
z_index = 2
layout_mode = 0
offset_left = 880.0
offset_top = 688.0
offset_right = 1031.0
offset_bottom = 740.0
theme_override_fonts/font = ExtResource("3_xa8ec")
theme_override_font_sizes/font_size = 35
text = "Quit"

[connection signal="mouse_entered" from="Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
